--- a/user/user.html
+++ b/user/user.html
@@ -169,18 +169,31 @@
             })
         }
         displayProductList()
+
+
         function addtocart(id) {
             let productlist = getProductList()
             let cart = getCartItems()
-            let product = productlist.find((p) => p.id == id)
-            cart.push({
-                ...product,
-                quantity: 1,
-                cartProductId: new Date().getTime().toString()
-            })
+            let productIndex = cart.findIndex((p) => p.id == id)
+            console.log("pd", productIndex);
+            console.log(productIndex, "productindex");
+            if (productIndex > -1) {
+                cart[productIndex].quantity = Math.min(cart[productIndex].quantity + 1, 20);
+                console.log("Increased quantity of existing product, new quantity:", cart[productIndex].quantity);
+            }
+            else {
+                let product = productlist.find((p) => p.id == id)
+                cart.push({
+                    ...product,
+                    quantity: 1,
+                    cartProductId: new Date().getTime().toString()
+                })
+
+            }
             setCartItem(cart)
             displayCart();
             loadcart()
+            calculateTotal()
         }
 
         function loadcart() {
@@ -201,6 +214,8 @@
             let cartitems = ''
             for (let i = 0; i < cart.length; i++) {
                 let cartitem = cart[i]
+
+
                 cartitems = cartitems + ` <div class="box" style="display: flex;">
                             <div class="" style="box-shadow: 0px 0px 10px 0px; border-radius:12px;">
                                 <img src="css/1440x400_Drama_.webp" style="height: 150px; width: 300px;margin-top:0px;" alt="">
@@ -220,6 +235,10 @@
                             <option ${parseInt(cartitem.quantity) === 6 ? 'selected' : ''} value="6"> 6</option>
                             <option ${parseInt(cartitem.quantity) === 7 ? 'selected' : ''} value="7"> 7</option>
                             <option ${parseInt(cartitem.quantity) === 8 ? 'selected' : ''} value="8"> 8</option>
+                            <option ${parseInt(cartitem.quantity) === 9 ? 'selected' : ''} value="9"> 9</option>
+                            <option ${parseInt(cartitem.quantity) === 10 ? 'selected' : ''} value="10"> 10</option>
+                            <option ${parseInt(cartitem.quantity) === 11 ? 'selected' : ''} value="11"> 11</option>
+                            <option ${parseInt(cartitem.quantity) === 12 ? 'selected' : ''} value="12"> 12</option>
                         </select>
                         <button style="border: 0px; margin-left: 20px;" onclick="removeitem(${cartitem.id})"><i class="fa-solid fa-trash"></i></button><hr>`
             }
@@ -233,6 +252,8 @@
             })
             localStorage.setItem("cart", JSON.stringify(updateitemlist))
             displayCart()
+            loadcart()
+            calculateTotal()
         }
 
         function calculateTotal() {
